Fix radio off-centered dot and background colors (#394)
* Fix is-checked hover background color

* Update dot

* Add changeset

* Add unchecked hover whitespace

* Use :before pseudo element for forced colors

* Add forced-color-adjust to forced-colors mixin

* Update radio forced colors

* Revert

* Add pointer

* Remove content

--- a/css/src/components/form/radio.scss
+++ b/css/src/components/form/radio.scss
@@ -17,19 +17,17 @@ $radio-spacing: 0.5em !default;
 	height: $radio-dot-size;
 	margin: auto;
 	border-radius: $border-radius-rounded;
-	background-color: $body-background;
 	content: '';
 	overflow: hidden;
 }
 
 @mixin radio-dot-checked {
 	background: $radio-dot-checked-color;
+	box-shadow: inset 0 0 0 0.25em $body-background;
 }
 
 .radio {
 	display: inline-flex;
-	position: relative;
-	align-items: flex-start;
 	line-height: 1.25;
 	cursor: pointer;
 
@@ -42,11 +40,18 @@ $radio-spacing: 0.5em !default;
 		height: $radio-circle-size;
 		border: $radio-border-width solid $radio-border-color;
 		border-radius: $border-radius-rounded;
+		background-color: $body-background;
 		color: $radio-dot-color;
+		cursor: pointer;
 		appearance: none;
 
-		&::before {
-			@include radio-dot;
+		@include forced-colors {
+			border-color: CanvasText !important;
+			background-color: unset !important;
+
+			&::before {
+				@include radio-dot;
+			}
 		}
 	}
 
@@ -54,18 +59,7 @@ $radio-spacing: 0.5em !default;
 		margin: 0 $radio-spacing;
 	}
 
-	/* stylelint-disable selector-max-specificity */
-
-	&.is-hovered,
-	&:hover:not([disabled]) {
-		.radio-dot:not(:checked)::before {
-			background: $radio-dot-hover-unchecked-color;
-		}
-	}
-
-	/* stylelint-enable */
-
-	/* stylelint-disable selector-no-qualifying-type */
+	/* stylelint-disable selector-max-specificity, selector-no-qualifying-type, max-nesting-depth */
 
 	input {
 		&.is-focused {
@@ -80,10 +74,39 @@ $radio-spacing: 0.5em !default;
 	input.is-checked,
 	input:checked,
 	.radio-dot.is-checked {
+		@include radio-dot-checked;
+
 		animation: $radio-animation $radio-duration $radio-timing-function 1;
 		border-color: $radio-dot-checked-color;
 
-		&::before {
+		@include forced-colors {
+			border-color: CanvasText !important;
+			background-color: unset !important;
+			box-shadow: none !important;
+
+			&::before {
+				background-color: CanvasText !important;
+			}
+		}
+	}
+
+	&.is-hovered,
+	&:hover:not([disabled]) {
+		.radio-dot:not(:checked) {
+			background: $radio-dot-hover-unchecked-color;
+			box-shadow: inset 0 0 0 0.25em $body-background;
+
+			@include forced-colors {
+				background-color: unset !important;
+				box-shadow: none !important;
+
+				&::before {
+					background-color: CanvasText !important;
+				}
+			}
+		}
+
+		.radio-dot.is-checked {
 			@include radio-dot-checked;
 		}
 	}
